Getting familiar with the selectors.

--- a/02-fundamentals-of-css/style.css
+++ b/02-fundamentals-of-css/style.css
@@ -1,4 +1,10 @@
-h1 {
+/* Universal selectors */
+* {
+  font-family: sans-serif;
+}
+
+/* Type selector */
+h1 { 
   color: grey;
   background-color: aliceblue;
 }
