Added some examples of using selectors.

--- a/02-fundamentals-of-css/style.css
+++ b/02-fundamentals-of-css/style.css
@@ -5,6 +5,14 @@
 
 /* Type selector */
 h1 { 
-  color: grey;
   background-color: aliceblue;
+}
+
+/* Class selector */
+.grey {
+  color: grey;
+}
+
+.reddish {
+ background-color: rgb(175, 78, 61);
 }
