Added Attribute selectors.

--- a/02-fundamentals-of-css/style.css
+++ b/02-fundamentals-of-css/style.css
@@ -21,3 +21,12 @@ h1 {
 #example {
   font-family: cursive;
 }
+
+/* Attribute selectors */
+[src] {
+  width: 300px;
+}
+
+img[src*="1687530"] {
+  width: 500px;
+}
