--- a/02-fundamentals-of-css/style.css
+++ b/02-fundamentals-of-css/style.css
@@ -28,10 +28,23 @@ h1 {
 }
 
 img[src*="1687530"] {
-  width: 500px;
+  width: 300px;
 }
 
 /* Pseudo-class selector */
 img[src*="1687530"]:hover {
-  width: 300px;
+  width: 500px;
+}
+
+/* Demonstrates specificity */
+p {
+  color: slategray;
+}
+
+.paras {
+  color: rgb(146, 146, 21);
+}
+
+#pinkish {
+  color: palevioletred
 }
