--- a/02-fundamentals-of-css/style.css
+++ b/02-fundamentals-of-css/style.css
@@ -11,8 +11,12 @@ body {
 /* Ex: Type selector */
 h1 { 
   background-color: aliceblue;
-  font-weight: 100;
+  font-weight: thin;
   text-align: center;
+}
+
+li {
+  list-style: square;
 }
 
 /* Ex: Class selectors */
@@ -71,7 +75,8 @@ p.paras {
 
 /* Ex: Additional specificity */
 h4 {
-  color: red
+  color: red;
+  font-weight: 900; 
 }
 
 #big h4 {
