Added a different color.

--- a/02-fundamentals-of-css/style.css
+++ b/02-fundamentals-of-css/style.css
@@ -10,7 +10,7 @@ body {
 
 /* Ex: Type selector */
 h1 { 
-  background-color: aliceblue;
+  background-color: azure;
   font-weight: thin;
   text-align: center;
 }
