--- a/02. Fundamentals of CSS/b. Display, Position/style.css
+++ b/02. Fundamentals of CSS/b. Display, Position/style.css
@@ -43,8 +43,8 @@ div:nth-child(4) {
 }
 
 div:nth-child(5) {
-  /* position: sticky; */
+  position: relative;
   background-color: rgb(242, 171, 84);
   border-color: rgb(183, 110, 21);
-  /* top: 0px; */
+  z-index: -1;
 }
