--- a/resources/css/format.css
+++ b/resources/css/format.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+  width: 100%;
+}
+
 body > article {
   display: inline-block;
 }
@@ -9,5 +14,5 @@ article:first-child {
 
 article:last-child {
   height: 100%;
-  width: 75%;
+  width: 70%;
 }
