--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -14,21 +14,22 @@ html, body {
 
 h1 {
   text-align: center;
-  margin: 10px;
+  margin-top: 50px;
+  margin-bottom: 10px;
 }
 
 /* BREADCRUMB */
 .container {
   background-color: lightgrey;
-  height: 150px;
-  width: 90%;
+  height: 450px;
+  width: 450px;
   display: flex;
   margin: 0 auto;
 }
 
 .box {
-  height: 100px;
-  width: 100px;
+  height: 50px;
+  width: 50px;
   background-color: hsl(0, 0%, 35%);
   border: 1px dotted white;
 }
