--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -4,6 +4,7 @@
   margin: 0px;
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: hsl(240, 75%, 5%);
 }
 
 /* FORMATS */
@@ -16,6 +17,7 @@ h1 {
   text-align: center;
   margin-top: 50px;
   margin-bottom: 10px;
+  color: lightblue;
 }
 
 /* BREADCRUMB */
@@ -25,13 +27,14 @@ h1 {
   width: 450px;
   display: flex;
   margin: 0 auto;
+  background-color: cornflowerblue;
 }
 
 .box {
   height: 50px;
   width: 50px;
-  background-color: hsl(0, 0%, 35%);
-  border: 1px dotted white;
+  margin: 1px;
+  background-color: hsl(240, 40%, 50%);
 }
 
 article:nth-child(1) .container{
