Added a new, more likeable font.

--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -3,7 +3,8 @@
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Oxygen, Helvetica, sans-serif;
+  font-weight: 300;
   background-color: hsl(240, 75%, 5%);
 }
 
@@ -17,7 +18,7 @@ h1 {
   text-align: center;
   margin-top: 50px;
   margin-bottom: 10px;
-  color: lightblue;
+  color: hsl(195, 53%, 85%);
 }
 
 /* BREADCRUMB */
