--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -5,6 +5,7 @@
   padding: 0px;
   font-family: Oxygen, Helvetica, sans-serif;
   font-weight: 300;
+  text-align: center;
   background-color: hsl(240, 75%, 5%);
 }
 
@@ -15,7 +16,6 @@ html, body {
 }
 
 h1 {
-  text-align: center;
   margin-top: 50px;
   margin-bottom: 10px;
   color: hsl(195, 53%, 85%);
@@ -93,10 +93,43 @@ article:nth-child(11) .container{
   align-items: baseline;
 }
 
-article:nth-child(12) .container .box {
-  min-height: 100px;
+.box-stretch {
+  width: 50px;
+  background-color: hsl(240, 40%, 50%);
+  border: 3px dashed lightskyblue;
 }
 article:nth-child(12) .container {
   justify-content: space-evenly;
   align-items: stretch;
+}
+
+hr {
+  color: aliceblue;
+  width: 60%;
+  margin: 85px auto 0px auto;
+}
+
+/**********************FLEX GROW**********************/
+
+article:nth-child(14) .container {
+  width: 60%;
+  height: 100px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+article:nth-child(14) .box:nth-child(1), .box:nth-child(7) {
+  flex-grow: 4;
+}
+
+article:nth-child(14) .box:nth-child(2), .box:nth-child(6) {
+  flex-grow: 3;
+}
+
+article:nth-child(14) .box:nth-child(3), .box:nth-child(5) {
+  flex-grow: 2;
+}
+
+article:nth-child(14) .box:nth-child(4) {
+  flex-grow: 1;
 }
