--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -118,18 +118,33 @@ article:nth-child(14) .container {
   align-items: center;
 }
 
+article:nth-child(14) .box {
+  color:azure;
+}
+
+aside {
+  color:hsla(208, 100%, 80%, 50%);
+  font-style: oblique;
+  font-size: smaller;
+  margin-bottom: 10px;
+}
+
 article:nth-child(14) .box:nth-child(1), .box:nth-child(7) {
   flex-grow: 4;
+  flex-shrink: 8;
 }
 
 article:nth-child(14) .box:nth-child(2), .box:nth-child(6) {
   flex-grow: 3;
+  flex-shrink: 7;
 }
 
 article:nth-child(14) .box:nth-child(3), .box:nth-child(5) {
   flex-grow: 2;
+  flex-shrink: 6;
 }
 
 article:nth-child(14) .box:nth-child(4) {
   flex-grow: 1;
+  flex-shrink: 0;
 }
