--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -30,7 +30,9 @@ hr {
 aside {
   color: hsla(208, 100%, 97%, 50%);
   padding-bottom: 10px;
-  
+  width: 800px;
+  text-align: justify;
+  margin: 0 auto;
 }
 
 /* BREADCRUMB */
@@ -157,5 +159,31 @@ article:nth-child(16) .box:nth-child(4) {
 article:nth-child(16) .box:nth-child(1),
 article:nth-child(16) .box:nth-child(7) {
   width: 100px;
+  flex-shrink: 1;
+}
+
+/******************************FLEX BASIS******************************/
+article:nth-child(18) > .container {
+  width: 60%;
+  height: 100px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+article:nth-child(18) .box {
+  padding-top: 10px;
+  color:aqua;
+  margin: 10px;
+  flex-basis: 75px;
+}
+
+article:nth-child(18) .box:nth-child(4) {
+  flex-grow: 2;
+  flex-shrink: 2;
+}
+
+article:nth-child(18) .box:nth-child(1),
+article:nth-child(18) .box:nth-child(7) {
+  flex-grow: 1;
   flex-shrink: 1;
 }
