--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -187,3 +187,27 @@ article:nth-child(18) .box:nth-child(7) {
   flex-grow: 1;
   flex-shrink: 1;
 }
+
+/******************************FLEX******************************/
+article:nth-child(20) > .container {
+  width: 60%;
+  height: 100px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+article:nth-child(20) .box {
+  padding-top: 10px;
+  color:aqua;
+  margin: 10px;
+  text-align: center;
+}
+
+article:nth-child(20) .box:nth-child(4) {
+  flex: 2 2 50px;
+}
+
+article:nth-child(20) .box:nth-child(1),
+article:nth-child(20) .box:nth-child(7) {
+  flex: 1 1 5px;
+}
