Added comments for future code.

--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -211,3 +211,13 @@ article:nth-child(20) .box:nth-child(1),
 article:nth-child(20) .box:nth-child(7) {
   flex: 1 1 5px;
 }
+
+/******************************FLEX-WRAP******************************/
+
+/******************************ALIGN-CONTENT******************************/
+
+/******************************FLEX-DIRECTION******************************/
+
+/******************************FLEX-FLOW******************************/
+
+/******************************NESTED FLEX BOXES******************************/
