--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -245,6 +245,66 @@ article:nth-child(24) .container {
   flex-wrap: nowrap;
 }
 /******************************ALIGN-CONTENT******************************/
+article:nth-child(26) > .container,
+article:nth-child(27) > .container,
+article:nth-child(28) > .container,
+article:nth-child(29) > .container,
+article:nth-child(30) > .container,
+article:nth-child(31) > .container,
+article:nth-child(32) > .container {
+  width: 500px;
+  height: 500px;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+article:nth-child(26) .box,
+article:nth-child(27) .box,
+article:nth-child(28) .box,
+article:nth-child(29) .box,
+article:nth-child(30) .box,
+article:nth-child(31) .box,
+article:nth-child(32) .box {
+  padding-top: 25px;
+  color:aqua;
+  margin: 10px;
+  text-align: center;
+  height: 75px;
+  width: 75px;
+}
+
+article:nth-child(26) .container {
+  align-content: flex-start;
+}
+
+article:nth-child(27) .container {
+  align-content: center;
+}
+
+article:nth-child(28) .container {
+  align-content: flex-end;
+}
+
+article:nth-child(29) .container {
+  align-content: space-between;
+}
+
+article:nth-child(30) .container {
+  align-content: space-around;
+}
+
+article:nth-child(31) .container {
+  align-content: space-evenly;
+}
+
+article:nth-child(32) .box {
+  min-height: 50px;
+}
+article:nth-child(32) .container {
+  align-content: stretch;
+  background-color: maroon;
+}
 
 /******************************FLEX-DIRECTION******************************/
 
