--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -307,7 +307,43 @@ article:nth-child(32) .container {
 }
 
 /******************************FLEX-DIRECTION******************************/
+article:nth-child(34) > .container,
+article:nth-child(35) > .container,
+article:nth-child(36) > .container,
+article:nth-child(37) > .container {
+  width: 60%;
+  height: fit-content;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
+article:nth-child(34) .box,
+article:nth-child(35) .box,
+article:nth-child(36) .box,
+article:nth-child(37) .box {
+  padding-top: 25px;
+  color:aqua;
+  margin: 10px;
+  text-align: center;
+  height: 75px;
+  width: 75px;
+}
+
+article:nth-child(34) > .container {
+  flex-direction: row;
+}
+
+article:nth-child(35) > .container {
+  flex-direction: row-reverse;
+}
+
+article:nth-child(36) > .container {
+  flex-direction: column;
+}
+
+article:nth-child(37) > .container {
+  flex-direction: column-reverse;
+}
 /******************************FLEX-FLOW******************************/
 
 /******************************NESTED FLEX BOXES******************************/
