--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -346,4 +346,23 @@ article:nth-child(37) > .container {
 }
 /******************************FLEX-FLOW******************************/
 
+article:nth-child(39) > .container {
+  width: 500px;
+  height: 500px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+article:nth-child(39) .box {
+  padding-top: 25px;
+  color:aqua;
+  margin: 10px;
+  text-align: center;
+  height: 75px;
+  width: 75px;
+}
+
+article:nth-child(39) .container {
+  flex-flow: column-reverse wrap-reverse;
+}
 /******************************NESTED FLEX BOXES******************************/
