--- a/flexbox/resources/css/style.css
+++ b/flexbox/resources/css/style.css
@@ -366,3 +366,21 @@ article:nth-child(39) .container {
   flex-flow: column-reverse wrap-reverse;
 }
 /******************************NESTED FLEX BOXES******************************/
+article:nth-child(41) {
+  margin-bottom: 50px;
+}
+
+article:nth-child(41) > .container {
+  width: 900px;
+  height: 500px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+article:nth-child(41) > .container > section {
+  display: flex;
+  height: 250px;
+  width: 250px;
+  justify-content: space-evenly;
+  align-items: center;
+}
