--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -29,6 +29,7 @@ h1 {
   background-color: hsl(245, 76%, 66%);
   margin: 0 auto;
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .basic-grid .grid-item {
