Added rows and columns.

--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -30,6 +30,8 @@ h1 {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  
 }
 
 .basic-grid .grid-item {
