Added a shorthand for showing the row and columns.

--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -31,7 +31,7 @@ h1 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
-  
+  grid-template: repeat(4, 1fr) / repeat(4, 1fr);
 }
 
 .basic-grid .grid-item {
