--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -41,3 +41,15 @@ h1 {
   background-color: hsl(208, 100%, 86%);
   border: 4px dashed cornflowerblue;
 }
+
+.basic-grid .grid-item:nth-child(2) {
+  grid-column: 2 / span 2;
+}
+
+.basic-grid .grid-item:nth-child(4) {
+  grid-row: 2 / span 2;
+}
+
+/* .basic-grid .grid-item:nth-child(4) {
+  grid-row: 2 / span 2;
+} */
