--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -50,6 +50,6 @@ h1 {
   grid-row: 2 / span 2;
 }
 
-/* .basic-grid .grid-item:nth-child(4) {
-  grid-row: 2 / span 2;
-} */
+.basic-grid .grid-item:nth-child(5) {
+  grid-area: 2 / 2 / span 2 / span 2;
+}
