--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -20,6 +20,7 @@ h1 {
   font-size: xx-large;
   margin-top: 25px;
   margin-bottom: 25px;
+  text-decoration: underline;
 }
 
 /******************************BASIC GRID******************************/
@@ -39,7 +40,7 @@ h1 {
 
 .basic-grid .grid-item {
   background-color: hsl(208, 100%, 86%);
-  border: 4px dashed cornflowerblue;
+  /* border: 4px dashed cornflowerblue; */
 }
 
 .basic-grid .grid-item:nth-child(2) {
@@ -53,3 +54,13 @@ h1 {
 .basic-grid .grid-item:nth-child(5) {
   grid-area: 2 / 2 / span 2 / span 2;
 }
+
+.basic-grid .grid-item:nth-child(6) {
+  grid-row: 2 / span 2;
+}
+
+.basic-grid .grid-item:nth-child(8) {
+  grid-column: 2 / span 2;
+}
+
+/******************************BASIC GRID******************************/
