--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -23,6 +23,10 @@ h1 {
   text-decoration: underline;
 }
 
+h2 {
+  margin-top: 40px;
+}
+
 /******************************BASIC GRID******************************/
 .basic-grid {
   height: 600px;
@@ -63,4 +67,4 @@ h1 {
   grid-column: 2 / span 2;
 }
 
-/******************************BASIC GRID******************************/
+/******************************GRID TEMPLATE AREA******************************/
