--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -138,7 +138,6 @@ h3 {
 .grid.justify-items.stretch > .grid-item {
   width: auto;
 }
-
 .grid.justify-items.stretch {
   justify-items: stretch;
 }
@@ -179,5 +178,32 @@ h3 {
 }
 
 /******************************GRID ALIGN-ITEMS******************************/
+.grid.align-items {
+  grid-template: repeat(4, 1fr) / repeat(4, 1fr);
+  gap: 10px;
+}
 
+.grid.align-items > .grid-item {
+  width: 50px;
+  height: 50px;
+}
+
+.grid.align-items.start {
+  align-items: start;
+}
+
+.grid.align-items.center {
+  align-items: center;
+}
+
+.grid.align-items.end {
+  align-items: end;
+}
+
+.grid.align-items.stretch > .grid-item {
+  height: auto;
+}
+.grid.align-items.stretch {
+  align-items: stretch;
+}
 /******************************GRID ALIGN-CONTENT******************************/
