--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -207,3 +207,36 @@ h3 {
   align-items: stretch;
 }
 /******************************GRID ALIGN-CONTENT******************************/
+.grid.align-content {
+  grid-template: repeat(4, 100px) / repeat(4, 100px);
+  gap: 10px;
+}
+
+.grid.align-content.start {
+  align-content: start;
+}
+
+.grid.align-content.center {
+  align-content: center;
+}
+
+.grid.align-content.end {
+  align-content: end;
+}
+
+.grid.align-content.space-around {
+  align-content: space-around;
+}
+
+.grid.align-content.space-between {
+  align-content: space-between;
+}
+
+.grid.align-content.space-evenly {
+  align-content: space-evenly;
+}
+
+.grid.align-content.stretch {
+  grid-template: repeat(4, 100px) / repeat(4, minmax(100px, 500px));
+  align-content: stretch;
+}
