--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -237,6 +237,6 @@ h3 {
 }
 
 .grid.align-content.stretch {
-  grid-template: repeat(4, 100px) / repeat(4, minmax(100px, 500px));
+  grid-template: repeat(4, minmax(100px, 500px)) / repeat(4, 100px);
   align-content: stretch;
 }
