--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -248,3 +248,11 @@ h3 {
   justify-content: center;
   align-content: center;
 }
+
+.grid.self > .grid-item:nth-child(8) {
+  height: 50px;
+  width: 50px;
+  background-color: hsl(0, 60%, 25%);;
+  align-self: end;
+  justify-self: end;
+}
