--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -256,3 +256,11 @@ h3 {
   align-self: end;
   justify-self: end;
 }
+
+/******************************GRID IMPLICIT******************************/
+.grid.implicit {
+  grid-template: repeat(4, 100px) / repeat(4,  100px);
+  grid-auto-rows: 50px;
+  grid-auto-columns: 25px;
+  gap: 10px;
+}
