Demonstrated the autoflow and autorow and auto column.

--- a/grid/resources/css/style.css
+++ b/grid/resources/css/style.css
@@ -264,3 +264,11 @@ h3 {
   grid-auto-columns: 25px;
   gap: 10px;
 }
+
+.grid.implicit.row {
+  grid-auto-flow: row;
+}
+
+.grid.implicit.column {
+  grid-auto-flow: column;
+}
