--- a/sizing-elements/css/style.css
+++ b/sizing-elements/css/style.css
@@ -32,3 +32,11 @@ h3 {
   margin-bottom: 5px;
   color: hsla(180, 100%, 97%, 70%);
 }
+
+.flex-container {
+  height: 500px;
+  width: 75%;
+  display: flex;
+  background-color: hsl(245, 76%, 66%);
+  margin: 0 auto;
+}
