--- a/relative-sizing/css/style.css
+++ b/relative-sizing/css/style.css
@@ -33,10 +33,35 @@ h3 {
   color: hsla(180, 100%, 97%, 70%);
 }
 
+p {
+  background-color: hsla(208, 100%, 97%, 0%);
+}
+
 .flex-container {
   height: 500px;
   width: 75%;
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   background-color: hsl(245, 76%, 66%);
   margin: 0 auto;
+  flex-direction: column;
+}
+
+/******************************EM******************************/
+.em {
+  font-size: 12px;
+  height: 250px;
+}
+
+.em p:first-child {
+  font-size: 1em;
+}
+
+.em p:nth-child(2) {
+  font-size: 2em;
+}
+
+.em p:last-child {
+  font-size: 3em;
 }
