--- a/relative-sizing/css/style.css
+++ b/relative-sizing/css/style.css
@@ -124,10 +124,18 @@ p {
 }
 
 /******************************MIN-MAX******************************/
+.min-max {
+  resize: both;
+  overflow: auto;
+}
+
 .min-max div {
   background-color: azure;
   height: 250px;
   min-width: 400px;
   width: 80%;
   max-width: 600px;
+  min-height: 300px;
+  height: 75%;
+  max-height: 800px;
 }
