--- a/media-queries/resources/css/queries.css
+++ b/media-queries/resources/css/queries.css
@@ -15,3 +15,17 @@
     width: 100px;
   }
 }
+
+@media only screen and (max-width: 575px) {
+  h1 {
+    font-size: x-large;
+  }
+  aside {
+    font-size: x-small;
+  }
+
+  .grid-container {
+    height: 700px;
+    grid-template: repeat(4, 100px) / repeat(2, 100px);
+  }
+}
