--- a/media-queries/resources/css/queries.css
+++ b/media-queries/resources/css/queries.css
@@ -29,3 +29,12 @@
     grid-template: repeat(4, 100px) / repeat(2, 100px);
   }
 }
+
+@media only screen and (max-width: 575px) { 
+  h1 {
+    font-size: large;
+  }
+  aside {
+    font-size: xx-small;
+  }
+}
