Button is ready.

--- a/dom-events/resources/css/style.css
+++ b/dom-events/resources/css/style.css
@@ -51,12 +51,20 @@ aside {
   border: none;
   height: 50px;
   width: 100px;
-  background: hsl(45, 56%, 56%);
-  border-radius: 10px;
+  background: hsl(180, 56%, 56%);
+  color: hsl(180, 56%, 16%);
+  font-weight: bolder;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 #switch:hover {
-  background-color: hsl(45, 56%, 36%);
+  background-color: hsl(180, 56%, 36%);
+  transition: background-color 100ms;
+}
+
+#switch:active {
+  background: hsl(180, 56%, 66%);
 }
 
 #color {
